# voice-indicators-backend

./: Cargo.toml  start.sh
src/: main.rs
src/lib/: cache.rs  mod.rs  structs.rs
src/routes/: mod.rs
src/routes/user/: mod.rs
src/routes/user/id/: get.rs  mod.rs  post.rs
